crates/rudy-dwarf/tests/snapshots/lldb_demo@aarch64-apple-darwin.snap
---
source: crates/rudy-dwarf/tests/example_visitor.rs
expression: all_structure
snapshot_kind: text
---
=== [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/lldb_demo-47af1fd900684c27.464y1fppipi6oeoc5m859wpeb.009i9j0.rcgu.o ===
0x0000063a:  namespace 'lldb_demo'
0x0000063f:    structure_type 'User'
0x00000677:      subprogram 'new'
0x00000686:        formal_parameter
0x0000068b:        formal_parameter
0x00000690:        formal_parameter
0x00000697:    structure_type 'Session'
0x000006c3:      subprogram 'is_expired'
0x000006d2:        formal_parameter
0x000006d9:    subprogram 'create_session'
0x000006f6:      formal_parameter 'user'
0x00000706:    subprogram 'main'
0x00000724:      variable 'user'
0x00000739:      variable 'session'
0x0000074e:      variable 'users'
0x00000763:      variable 'iter'
0x00000778:      variable 'i'
0x000007ca:    namespace '{impl#2}'
0x000007cf:      subprogram 'fmt'
0x000007ec:        formal_parameter 'self'
0x000007fa:        formal_parameter 'f'
0x0000080a:    namespace '{impl#3}'
0x0000080f:      subprogram 'fmt'
0x0000082c:        formal_parameter 'self'
0x0000083a:        formal_parameter 'f'

=== [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/lldb_demo-47af1fd900684c27.7u8wt2z9hhxcga4qi1q56lz1h.009i9j0.rcgu.o ===
0x00000ce8:  namespace 'lldb_demo'
0x00000ced:    structure_type 'User'
0x00000d26:    structure_type 'Session'

=== [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/lldb_demo-47af1fd900684c27.benhzwu8pyffsm6kcyyn8bn81.009i9j0.rcgu.o ===
0x000003fc:  namespace 'lldb_demo'
0x00000401:    structure_type 'Session'
0x0000042e:    structure_type 'User'

=== [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/lldb_demo-47af1fd900684c27.d6o709lucuyek8zys8h5meuq0.009i9j0.rcgu.o ===
0x00000d9d:  namespace 'lldb_demo'
0x00000da2:    structure_type 'User'

=== [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/lldb_demo-47af1fd900684c27.f5bjjidlrv9196kgsnq842f62.009i9j0.rcgu.o ===
0x00000768:  namespace 'lldb_demo'
0x0000076d:    structure_type 'User'
