crates/rudy-dwarf/tests/snapshots/lldb_demo@aarch64-unknown-linux-gnu.snap
---
source: crates/rudy-dwarf/tests/example_visitor.rs
expression: all_structure
snapshot_kind: text
---
=== [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/examples/lldb_demo ===
0x00001234:  namespace 'lldb_demo'
0x00001239:    structure_type 'User'
0x000028d2:  namespace 'lldb_demo'
0x000028d7:    structure_type 'Session'
0x00002904:    structure_type 'User'
0x00006f19:  namespace 'lldb_demo'
0x00006f1e:    structure_type 'User'
0x000089f8:  namespace 'lldb_demo'
0x000089fd:    structure_type 'User'
0x00008a36:    structure_type 'Session'
0x00015b39:  namespace 'lldb_demo'
0x00015b3e:    structure_type 'User'
0x00015b76:      subprogram 'new'
0x00015b85:        formal_parameter
0x00015b8a:        formal_parameter
0x00015b8f:        formal_parameter
0x00015b96:    structure_type 'Session'
0x00015bc2:      subprogram 'is_expired'
0x00015bd1:        formal_parameter
0x00015bd8:    subprogram 'create_session'
0x00015bf5:      formal_parameter 'user'
0x00015c05:    subprogram 'main'
0x00015c23:      variable 'user'
0x00015c38:      variable 'session'
0x00015c4d:      variable 'users'
0x00015c62:      variable 'iter'
0x00015c77:      variable 'i'
0x00015cc9:    namespace '{impl#2}'
0x00015cce:      subprogram 'fmt'
0x00015ceb:        formal_parameter 'self'
0x00015cf9:        formal_parameter 'f'
0x00015d09:    namespace '{impl#3}'
0x00015d0e:      subprogram 'fmt'
0x00015d2b:        formal_parameter 'self'
0x00015d39:        formal_parameter 'f'
