crates/rudy-dwarf/tests/snapshots/lldb_demo@x86_64-unknown-linux-gnu.snap
---
source: crates/rudy-dwarf/tests/example_visitor.rs
expression: all_structure
snapshot_kind: text
---
=== [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-unknown-linux-gnu/lldb_demo ===
0x0000506d:  namespace 'lldb_demo'
0x00005072:    structure_type 'User'
0x000050aa:      subprogram 'new'
0x000050b9:        formal_parameter
0x000050be:        formal_parameter
0x000050c3:        formal_parameter
0x000050ca:    structure_type 'Session'
0x000050f6:      subprogram 'is_expired'
0x00005105:        formal_parameter
0x0000510c:    subprogram 'create_session'
0x00005129:      formal_parameter 'user'
0x00005139:    subprogram 'main'
0x00005157:      variable 'user'
0x0000516c:      variable 'session'
0x00005181:      variable 'users'
0x00005196:      variable 'iter'
0x000051ab:      variable 'i'
0x000051fd:    namespace '{impl#2}'
0x00005202:      subprogram 'fmt'
0x0000521f:        formal_parameter 'self'
0x0000522d:        formal_parameter 'f'
0x0000523d:    namespace '{impl#3}'
0x00005242:      subprogram 'fmt'
0x0000525f:        formal_parameter 'self'
0x0000526d:        formal_parameter 'f'
0x0000db12:  namespace 'lldb_demo'
0x0000db17:    structure_type 'User'
0x0000f4bc:  namespace 'lldb_demo'
0x0000f4c1:    structure_type 'User'
0x0001bcdd:  namespace 'lldb_demo'
0x0001bce2:    structure_type 'User'
0x0001bd1b:    structure_type 'Session'
0x0001d02a:  namespace 'lldb_demo'
0x0001d02f:    structure_type 'Session'
0x0001d05c:    structure_type 'User'
