crates/rudy-dwarf/tests/snapshots/method_discovery@x86_64-apple-darwin.snap
---
source: crates/rudy-dwarf/tests/example_visitor.rs
expression: all_structure
snapshot_kind: text
---
=== [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/examples/method_discovery-9bd04d74df44b8e6.6flzzdz5w8enggkotujeq4jjx.1oc1f3x.rcgu.o ===
0x0000002a:  namespace 'method_discovery'
0x0000002f:    structure_type 'Container<method_discovery::Session>'
0x0000004c:      subprogram 'new<method_discovery::Session>'
0x00000064:        formal_parameter
0x0000006a:      subprogram 'get<method_discovery::Session>'
0x00000082:        formal_parameter
0x00000089:    structure_type 'Session'

=== [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/examples/method_discovery-9bd04d74df44b8e6.85sa3hoj2p0nh78j44txxyd6p.1oc1f3x.rcgu.o ===
0x0000002a:  namespace 'method_discovery'
0x0000002f:    structure_type 'Session'
0x0000004f:      subprogram 'new'
0x0000005e:        formal_parameter
0x00000063:        formal_parameter
0x00000069:      subprogram 'get_id'
0x00000078:        formal_parameter
0x0000007e:      subprogram 'set_name'
0x00000089:        formal_parameter
0x0000008e:        formal_parameter
0x00000095:    namespace '{impl#1}'
0x0000009a:      subprogram 'describe'
0x000000b7:        formal_parameter 'self'
0x000000e4:      subprogram 'description_length'
0x00000101:        formal_parameter 'self'
0x00000111:    namespace '{impl#2}'
0x00000116:      subprogram 'identifier'
0x00000133:        formal_parameter 'self'
0x00000161:    namespace '{impl#3}'
0x00000166:      subprogram 'fmt'
0x00000183:        formal_parameter 'self'
0x00000191:        formal_parameter 'f'
0x000001a1:    structure_type 'Container<method_discovery::Session>'
0x000001be:      subprogram 'get_session_id'
0x000001cd:        formal_parameter
0x000001d4:    subprogram 'process_session'
0x000001f1:      formal_parameter 'session'
0x0000021e:    subprogram 'modify_session'
0x00000237:      formal_parameter 'session'
0x00000245:      formal_parameter 'new_name'
0x00000255:    subprogram 'test_all_methods'
0x0000026e:      formal_parameter 'session'
0x000002a0:      variable 'container'
0x000002b2:    subprogram 'main'
0x000002d8:      variable 'session'

=== [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/examples/method_discovery-9bd04d74df44b8e6.89lmesofrwkfs747hs0lhkfk8.1oc1f3x.rcgu.o ===
0x0000002a:  namespace 'method_discovery'
0x0000002f:    namespace 'utils'
0x00000034:      subprogram 'validate_session'
0x00000051:        formal_parameter 'session'
0x00000060:      subprogram 'format_session'
0x0000007d:        formal_parameter 'session'
0x000000ab:    structure_type 'Session'

=== [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/examples/method_discovery-9bd04d74df44b8e6.ctffmbhy59ntile04b2durqom.1oc1f3x.rcgu.o ===
0x00000480:  namespace 'method_discovery'
0x00000485:    structure_type 'Session'
0x000004a6:    structure_type 'Container<method_discovery::Session>'

=== [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/examples/method_discovery-9bd04d74df44b8e6.ddo0vrrbv4vxprem9f0z1jugr.1oc1f3x.rcgu.o ===
0x0000037a:  namespace 'method_discovery'
0x0000037f:    structure_type 'Session'
