crates/rudy-dwarf/tests/snapshots/simple_test.snap
---
source: crates/rudy-dwarf/tests/example_visitor.rs
expression: all_structure
snapshot_kind: text
---
=== [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/simple_test-1949748e0ac2d15c.4e9yyk0wobavu8frl8puhl6rt.1n34yn5.rcgu.o ===
0x0000002a:  namespace 'simple_test' @  (simple_test)
0x0000002f:    subprogram 'function_call' @  (simple_test)
0x0000004c:      formal_parameter 'x' @  (simple_test)
0x0000005f:      variable 'y' @  (simple_test)
0x00000070:    subprogram 'main' @  (simple_test)
0x00000096:      variable 'x' @  (simple_test)
0x000000b2:      variable 'result' @  (simple_test)
