crates/rudy-dwarf/tests/snapshots/simple_test@aarch64-apple-darwin.snap
---
source: crates/rudy-dwarf/tests/example_visitor.rs
expression: all_structure
snapshot_kind: text
---
=== [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/examples/simple_test-60959e377b9f37a1.4706w5ambexhs5jrz1qrmcs0b.0wod0hq.rcgu.o ===
0x0000002a:  namespace 'simple_test'
0x0000002f:    subprogram 'function_call'
0x0000004c:      formal_parameter 'x'
0x0000005f:      variable 'y'
0x00000070:    subprogram 'main'
0x00000096:      variable 'x'
0x000000b2:      variable 'result'
